fix: fix footer gap

--- a/style.css
+++ b/style.css
@@ -517,7 +517,7 @@ p{
 .container-footer .footer-title h2{
   font-size: 3rem;
   letter-spacing: -1px;
-  margin-bottom: 2rem;
+  margin-bottom: 4.5rem;
   line-height: 1.1;
 }
 
